# pier

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  README.md  USER_SCRIPTS.md  build.rs  default.nix  derivation.nix  overlay.nix  rustfmt.toml  shell.nix
.github/workflows/: ci.yml
doc/: HACKING.org  MANUAL.md  MANUAL.org  README.org
examples/: example.tml  example.yml
src/: cli.rs  cli.yml  config.rs  defaults.rs  error.rs  example.tml  lib.rs  macros.rs  main.rs  script.rs  test.rs  tui.rs
test/: pier.toml
tests/: add.test.sh  cli.rs  common.rs  error_handling.rs  macros.rs  test_cli.rs  tests.rs
