[package]
name = "pier"
version = "0.1.0"
authors = ["Benjamin Scholtz <bscholtz.bds@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
toml = "0.4"
serde = { version = '1.0.83', features = ['derive'] }
prettytable-rs = "^0.8"

[dev-dependencies]
serde = { version = '1.0.83', features = ['derive'] }
